...

      // Postavljamo početni zaslon na AuthGate koji provjerava jel korisnik prijavljen
      home: const AuthGate(),
      routes: {
        // Home ruta koja vodi na početnu stranicu
        '/home': (context) =>
        const MyHomePage(title: 'Aplikacija za praćenje namirnica'),
      },

      // Isključujemo debug banner
      debugShowCheckedModeBanner: false,
    );
  }
...
